# Music_Application

./: Application.cpp  Application.h  CMakeLists.txt
S32K144/: Board.cpp  Board.h
controller/: MediaListController.cpp  MediaListController.h  MetadataController.cpp  MetadataController.h  PlayMusicController.cpp  PlayMusicController.h  PlaylistController.cpp  PlaylistController.h  VideoController.cpp  VideoController.h  VideoMetadataController.cpp  VideoMetadataController.h
model/: FileBrowser.cpp  FileBrowser.h  MetadataModel.cpp  MetadataModel.h  PlayMusicModel.cpp  PlayMusicModel.h  PlaylistModel.cpp  PlaylistModel.h  Utils.cpp  Utils.h  VideoMetadataModel.cpp  VideoMetadataModel.h  VideoModel.cpp  VideoModel.h
playlists/: pop.txt  rock.txt  study.txt  video.txt
view/: MediaListView.cpp  MediaListView.h  MetadataView.cpp  MetadataView.h  PlayMusicView.cpp  PlayMusicView.h  PlaylistView.cpp  PlaylistView.h  VideoMetadataView.cpp  VideoMetadataView.h  VideoView.cpp  VideoView.h
